src/main/java/com/example/jokerexamples/dataflow/good/config/EmailConfig.java
package com.example.jokerexamples.dataflow.good.config;public class EmailConfig {
}
